# gigachat-rss-demo

./: .env.example  README.md  batcher_example.py  chunks_info.json  enums.py  gigachat_example.py  models.py  pyproject.toml  rss_example.ipynb  tools.py  war_and_peace.docx
