[project]
name = "gigachat-rss-demo"
version = "0.1.0"
description = "gigachat-rss-demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "environs>=14.5.0",
    "ipykernel>=7.1.0",
    "langchain-gigachat>=0.3.12",
    "notebook>=7.5.0",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "tzdata>=2025.2",
]
